# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./services";
 export * from "./testimonials";
 export * from "./contact_messages";
 export * from "./admin_users";
+export * from "./site_settings";
